@@ -9,6 +9,7 @@
 - API addition: Tree indentation can be customized.
 - Fixed GlyphLayout not respecting BitmapFontData#down.
 - Adds new InstanceBufferObject and InstanceBufferObjectSubData classes to enable instanced rendering.
+- Adds methods to enable instanced rendering and set per instance data in a Mesh.
 
 [1.9.8]
 - Add iPhoneX images
